FIXED LI WRAPPING FINALLYgit add -A

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,13 +59,14 @@ img {
 }
 
 #letterButtons li {
-    display: inline;
+    display: inline-block;
     list-style:none;
     padding: 10px;
     border: 3px solid #8D8B8B;
     background-color: #8D8B8B;
     border-radius: 5px;
     margin-left: 5px;
+    margin-top: 5px;
 }
 
 #letterButtons li:hover {
